--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "core-js": "^3.8.0",
+    "lodash": "^4.17.21",
+    "npm-package-json-lint": "^7.1.0",
+    "npm-registry-fetch": "^16.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "tar": "^4.4.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
