--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-package-json-lint": "^7.1.0",
     "npm-registry-fetch": "^16.1.0",
     "react": "^18.2.0",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.22.0",
