--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@testing-library/dom": "^10.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.0",
+    "firebase": "^10.12.1",
     "lodash": "^4.17.21",
     "npm-package-json-lint": "^7.1.0",
     "npm-registry-fetch": "^16.1.0",
